impl: db persistence model